Responsive css added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/css/nice-select.css" type="text/css">
     <!-- ====Main style====-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!-- ====Responsive Code====-->
+    <link rel="stylesheet" href="assets/css/responsive.css" type="text/css">
     <!-- ====Jquery calling====-->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
 
